tests/fixtures/invalid/pow_dict_int_bytes.py
# Cannot call pow() with Dict[str, int], Int, Bytes
x = pow({"a": 1}, 1, b"hello")
